--- a/MvvmTestDemo/DemoViews/ScrollViewerDemo.xaml
+++ b/MvvmTestDemo/DemoViews/ScrollViewerDemo.xaml
@@ -14,7 +14,7 @@
             <ScrollBar Width="50" Height="100"
                        BorderBrush="{StaticResource AssistantThemeBrush}"
                        BorderThickness="1"
-                       Foreground="Red" Background="#F0F0F0"
+                       Background="#F0F0F0"
                        Value="0"
                        Minimum="0" Maximum="100"
                        Orientation="Vertical"
@@ -22,11 +22,11 @@
             <ScrollBar Width="50" Height="100"
                        BorderBrush="{StaticResource AssistantThemeBrush}"
                        BorderThickness="1"
-                       Foreground="Red" Background="#F0F0F0"
+                       Background="#F0F0F0"
                        Value="0"
                        Minimum="0" Maximum="100"
                        Margin="30,0"
-                       pc:ScrollBarAssistant.IsScrollBarRepeatButton="False" pc:ScrollBarAssistant.ThumbInsideMargin="0,5"
+                       pc:ScrollBarAssistant.IsShowScrollBarRepeatButton="False" pc:ScrollBarAssistant.ThumbInsideMargin="0,5"
                        Orientation="Vertical"
                        Style="{StaticResource ThumbMarginScrollBarStyle}" />
             <ScrollBar Width="300" Height="50"
@@ -122,7 +122,7 @@
                            CanContentScroll="True" PanningMode="Both" IsDeferredScrollingEnabled="False"
                            VerticalScrollBarVisibility="Visible" ClipToBounds="True"
                            HorizontalScrollBarVisibility="Visible"
-                           pc:ScrollBarAssistant.IsScrollBarRepeatButton="False"
+                           pc:ScrollBarAssistant.IsShowScrollBarRepeatButton="False"
                            pc:ScrollViewerAssistant.IsCornerShow="True"
                            VirtualizingPanel.ScrollUnit="Pixel"
                            VirtualizingPanel.VirtualizationMode="Recycling"
