--- a/CookPopularControl/Themes/CookColors/BaseColor.xaml
+++ b/CookPopularControl/Themes/CookColors/BaseColor.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    
+
     <!--  **********以下保持不变***********  -->
 
     <SolidColorBrush x:Key="FieldBorderBrush" Color="{x:Static SystemColors.ActiveBorderColor}" />
@@ -10,10 +10,13 @@
 
     <Color x:Key="BlockColor">#554A4A4A</Color>
     <Color x:Key="UnEnabledColor">#D3D3D3</Color>
-    <!--<Color x:Key="{x:Static SystemColors.GrayTextColorKey}"/>-->
     <SolidColorBrush x:Key="BlockBrush" Color="{StaticResource BlockColor}" />
     <SolidColorBrush x:Key="UnEnabledBrush" Color="{StaticResource UnEnabledColor}" />
-    <!--<SolidColorBrush x:Key="UnEnabledBrush" Color="{x:Static SystemColors.GrayTextColor}" />-->
+    <SolidColorBrush x:Key="UnEnabledDarkBrush" Color="{x:Static SystemColors.GrayTextColor}" />
+    <SolidColorBrush x:Key="UnEnabledDarkDarkBrush" Color="{x:Static SystemColors.DesktopColor}" />
+    <!--给已知Key起别名，全局资源字典中不起作用-->
+    <!--<StaticResourceExtension x:Key="UnEnabledDarkBrush" ResourceKey="{x:Static SystemColors.GrayTextBrushKey}" />
+    <StaticResourceExtension x:Key="UnEnabledDarkDarkBrush" ResourceKey="{x:Static SystemColors.DesktopBrushKey}" />-->
 
     <Color x:Key="MessageDialogSuccessColor">#32AA32</Color>
     <Color x:Key="MessageDialogInfoColor">#1E90FF</Color>
