--- a/CookPopularControl/Themes/CookColors/BlueColor.xaml
+++ b/CookPopularControl/Themes/CookColors/BlueColor.xaml
@@ -11,11 +11,18 @@
     <SolidColorBrush x:Key="AssistantThemeBrush" Color="{StaticResource AssistantThemeColor}" />
 
     <Color x:Key="BorderBrushColor">#1A42E6</Color>
-    <Color x:Key="ButtonBaseMouseOverColor">#2A2AF8</Color>
-    <Color x:Key="ButtonBasePressColor">#0808D6</Color>
+    <Color x:Key="ControlMouseOverColor">#2A2AF8</Color>
+    <Color x:Key="ControlPressColor">#0808D6</Color>
     <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource BorderBrushColor}" />
-    <SolidColorBrush x:Key="ButtonBaseMouseOverBackground" Color="{StaticResource ButtonBaseMouseOverColor}" />
-    <SolidColorBrush x:Key="ButtonBasePressBackground" Color="{StaticResource ButtonBasePressColor}" />
+    <SolidColorBrush x:Key="ControlMouseOverBackground" Color="{StaticResource ControlMouseOverColor}" />
+    <SolidColorBrush x:Key="ControlPressBackground" Color="{StaticResource ControlPressColor}" />
+
+    <Color x:Key="PrimaryForegroundColor">#4A4A4A</Color>
+    <Color x:Key="AssistantForegroundColor">#FFFFFF</Color>
+    <SolidColorBrush x:Key="PrimaryForegroundBrush" Color="{StaticResource PrimaryForegroundColor}" />
+    <SolidColorBrush x:Key="AssistantForegroundBrush" Color="{StaticResource AssistantForegroundColor}" />
+
+    <SolidColorBrush x:Key="RippleFeedback" Color="{x:Static SystemColors.ControlColor}" />
 
     <Color x:Key="DataGridRowSelectedColor">#4242EB</Color>
     <Color x:Key="DataGridRowMouseOverColor">#2A2AF8</Color>
