--- a/CookPopularControl/Themes/CookColors/DarkColor.xaml
+++ b/CookPopularControl/Themes/CookColors/DarkColor.xaml
@@ -5,28 +5,28 @@
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/CookColors/BaseColor.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Color x:Key="PrimaryThemeColor">#00FF66</Color>
-    <Color x:Key="AssistantThemeColor">#00CED1</Color>
+    <Color x:Key="PrimaryThemeColor">#101010</Color>
+    <Color x:Key="AssistantThemeColor">#123456</Color>
     <SolidColorBrush x:Key="PrimaryThemeBrush" Color="{StaticResource PrimaryThemeColor}" />
     <SolidColorBrush x:Key="AssistantThemeBrush" Color="{StaticResource AssistantThemeColor}" />
 
-    <Color x:Key="BorderBrushColor">#11FF70</Color>
-    <Color x:Key="ControlMouseOverColor">#00DD58</Color>
-    <Color x:Key="ControlPressColor">#00AA44</Color>
-    <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource BorderBrushColor}" />
+    <Color x:Key="BorderBrushColor">#808080</Color>
+    <Color x:Key="ControlMouseOverColor">#E0E0E0</Color>
+    <Color x:Key="ControlPressColor">#C0C0C0</Color>
+    <SolidColorBrush x:Key="BorderBrush" Color="{x:Static SystemColors.ControlDarkColor}" />
     <SolidColorBrush x:Key="ControlMouseOverBackground" Color="{StaticResource ControlMouseOverColor}" />
     <SolidColorBrush x:Key="ControlPressBackground" Color="{StaticResource ControlPressColor}" />
 
-    <Color x:Key="PrimaryForegroundColor">#4A4A4A</Color>
+    <Color x:Key="PrimaryForegroundColor">#FFFFFF</Color>
     <Color x:Key="AssistantForegroundColor">#FFFFFF</Color>
     <SolidColorBrush x:Key="PrimaryForegroundBrush" Color="{StaticResource PrimaryForegroundColor}" />
     <SolidColorBrush x:Key="AssistantForegroundBrush" Color="{StaticResource AssistantForegroundColor}" />
 
     <SolidColorBrush x:Key="RippleFeedback" Color="{x:Static SystemColors.ControlColor}" />
 
-    <Color x:Key="DataGridRowSelectedColor">#00FF66</Color>
-    <Color x:Key="DataGridRowMouseOverColor">#00DD58</Color>
-    <Color x:Key="DataGridRowMouseOverSelected">#00AA44</Color>
-    <Color x:Key="DataGirdCellFocusedColor">#00CED1</Color>
+    <Color x:Key="DataGirdCellFocusedColor">#F0F0F0</Color>
+    <Color x:Key="DataGridRowSelectedColor">#C0C0C0</Color>
+    <Color x:Key="DataGridRowMouseOverColor">#D0D0D0</Color>
+    <Color x:Key="DataGridRowMouseOverSelected">#E0E0E</Color>
 
 </ResourceDictionary>
