--- a/CookPopularControl/Themes/CookColors/DodgerBlueColor.xaml
+++ b/CookPopularControl/Themes/CookColors/DodgerBlueColor.xaml
@@ -10,13 +10,19 @@
     <SolidColorBrush x:Key="PrimaryThemeBrush" Color="{StaticResource PrimaryThemeColor}" />
     <SolidColorBrush x:Key="AssistantThemeBrush" Color="{StaticResource AssistantThemeColor}" />
 
-    <!--  #FF9C8844  -->
-    <Color x:Key="ButtonBaseMouseOverColor">#55AAFF</Color>
-    <Color x:Key="ButtonBasePressColor">#4169E1</Color>
     <Color x:Key="BorderBrushColor">#4285F4</Color>
-    <SolidColorBrush x:Key="ButtonBaseMouseOverBackground" Color="{StaticResource ButtonBaseMouseOverColor}" />
-    <SolidColorBrush x:Key="ButtonBasePressBackground" Color="{StaticResource ButtonBasePressColor}" />
+    <Color x:Key="ControlMouseOverColor">#55AAFF</Color>
+    <Color x:Key="ControlPressColor">#4169E1</Color>
     <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource BorderBrushColor}" />
+    <SolidColorBrush x:Key="ControlMouseOverBackground" Color="{StaticResource ControlMouseOverColor}" />
+    <SolidColorBrush x:Key="ControlPressBackground" Color="{StaticResource ControlPressColor}" />
+
+    <Color x:Key="PrimaryForegroundColor">#4A4A4A</Color>
+    <Color x:Key="AssistantForegroundColor">#FFFFFF</Color>
+    <SolidColorBrush x:Key="PrimaryForegroundBrush" Color="{StaticResource PrimaryForegroundColor}" />
+    <SolidColorBrush x:Key="AssistantForegroundBrush" Color="{StaticResource AssistantForegroundColor}" />
+
+    <SolidColorBrush x:Key="RippleFeedback" Color="{x:Static SystemColors.ControlColor}" />
 
     <Color x:Key="DataGirdCellFocusedColor">#FF5722</Color>
     <Color x:Key="DataGridRowSelectedColor">#1E90FF</Color>
