--- a/CookPopularControl/Themes/CookColors/OrangeColor.xaml
+++ b/CookPopularControl/Themes/CookColors/OrangeColor.xaml
@@ -11,11 +11,18 @@
     <SolidColorBrush x:Key="AssistantThemeBrush" Color="{StaticResource AssistantThemeColor}" />
 
     <Color x:Key="BorderBrushColor">#D2691E</Color>
-    <Color x:Key="ButtonBaseMouseOverColor">#FFC125</Color>
-    <Color x:Key="ButtonBasePressColor">#DDA500</Color>
+    <Color x:Key="ControlMouseOverColor">#FFC125</Color>
+    <Color x:Key="ControlPressColor">#DDA500</Color>
     <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource BorderBrushColor}" />
-    <SolidColorBrush x:Key="ButtonBaseMouseOverBackground" Color="{StaticResource ButtonBaseMouseOverColor}" />
-    <SolidColorBrush x:Key="ButtonBasePressBackground" Color="{StaticResource ButtonBasePressColor}" />
+    <SolidColorBrush x:Key="ControlMouseOverBackground" Color="{StaticResource ControlMouseOverColor}" />
+    <SolidColorBrush x:Key="ControlPressBackground" Color="{StaticResource ControlPressColor}" />
+
+    <Color x:Key="PrimaryForegroundColor">#4A4A4A</Color>
+    <Color x:Key="AssistantForegroundColor">#FFFFFF</Color>
+    <SolidColorBrush x:Key="PrimaryForegroundBrush" Color="{StaticResource PrimaryForegroundColor}" />
+    <SolidColorBrush x:Key="AssistantForegroundBrush" Color="{StaticResource AssistantForegroundColor}" />
+
+    <SolidColorBrush x:Key="RippleFeedback" Color="{x:Static SystemColors.ControlColor}" />
 
     <Color x:Key="DataGridRowSelectedColor">#FFA500</Color>
     <Color x:Key="DataGridRowMouseOverColor">#FFC125</Color>
