--- a/CookPopularControl/Themes/CookColors/YellowColor.xaml
+++ b/CookPopularControl/Themes/CookColors/YellowColor.xaml
@@ -11,11 +11,18 @@
     <SolidColorBrush x:Key="AssistantThemeBrush" Color="{StaticResource AssistantThemeColor}" />
 
     <Color x:Key="BorderBrushColor">#FFFF22</Color>
-    <Color x:Key="ButtonBaseMouseOverColor">#EEEE00</Color>
-    <Color x:Key="ButtonBasePressColor">#CCCC00</Color>
+    <Color x:Key="ControlMouseOverColor">#EEEE00</Color>
+    <Color x:Key="ControlPressColor">#CCCC00</Color>
     <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource BorderBrushColor}" />
-    <SolidColorBrush x:Key="ButtonBaseMouseOverBackground" Color="{StaticResource ButtonBaseMouseOverColor}" />
-    <SolidColorBrush x:Key="ButtonBasePressBackground" Color="{StaticResource ButtonBasePressColor}" />
+    <SolidColorBrush x:Key="ControlMouseOverBackground" Color="{StaticResource ControlMouseOverColor}" />
+    <SolidColorBrush x:Key="ControlPressBackground" Color="{StaticResource ControlPressColor}" />
+
+    <Color x:Key="PrimaryForegroundColor">#4A4A4A</Color>
+    <Color x:Key="AssistantForegroundColor">#FFFFFF</Color>
+    <SolidColorBrush x:Key="PrimaryForegroundBrush" Color="{StaticResource PrimaryForegroundColor}" />
+    <SolidColorBrush x:Key="AssistantForegroundBrush" Color="{StaticResource AssistantForegroundColor}" />
+
+    <SolidColorBrush x:Key="RippleFeedback" Color="{x:Static SystemColors.ControlColor}" />
 
     <Color x:Key="DataGridRowSelectedColor">#FFFF33</Color>
     <Color x:Key="DataGridRowMouseOverColor">#EEEE00</Color>
