--- a/MvvmTestDemo/DemoViews/ButtonDemo.xaml
+++ b/MvvmTestDemo/DemoViews/ButtonDemo.xaml
@@ -127,7 +127,8 @@
                         Margin="10,10,0,0" ToolTip="IconButton"
                         pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource CloseCircleGeometry}"
                         Style="{StaticResource ButtonIconStyle}" />
-                <Button Margin="10,10,0,0" ToolTip="IconTransparentButton"
+                <Button Width="40" Height="40" 
+                        Margin="10,10,0,0" ToolTip="IconTransparentButton"
                         pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource SuccessGeometry}"
                         Style="{StaticResource ButtonTransparentIconStyle}" />
                 <Button Width="40" Height="40"
@@ -302,7 +303,6 @@
                 <Button Width="300" Height="60"
                         FontSize="20"
                         ToolTip="LinearProgressButton"
-                        pc:ButtonAssist.ProgressBarBrush="LimeGreen"
                         pc:ButtonAssist.ProgressValue="{Binding Value, Mode=TwoWay}"
                         Click="Button_Click"
                         Style="{StaticResource ButtonLinearProgressStyle}" />
@@ -310,7 +310,6 @@
                         Background="Transparent"
                         FontSize="20"
                         Margin="20,0" ToolTip="CircularProgressButton"
-                        pc:ButtonAssist.ProgressBarBrush="LimeGreen"
                         pc:ButtonAssist.ProgressBarStyle="{StaticResource Demo.CircularProgressBarStyle}"
                         pc:ButtonAssist.ProgressValue="{Binding Value, Mode=TwoWay}"
                         Click="Button_Click"
